[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-automation"
version = "1.0.0"
description = "Powerful automation tools and scripts to eliminate repetitive chores, deploy environments, and lint branches."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
